<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/app_background"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/app_background"
            android:gravity="bottom"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/resultListfragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <View
                android:id="@+id/prev_curr_exp_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/prev_curr_exp_divider" />

            <com.llamacorp.equate.view.EditTextCursorWatcher
                xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
                android:id="@+id/textDisplay"
                android:layout_width="match_parent"
                android:layout_height="54sp"
                android:layout_marginRight="5dp"
                android:background="@color/app_background"
                android:gravity="right|bottom"
                android:inputType="textNoSuggestions"
                android:textSize="40sp"
                customNS:minimumTextSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/unit_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:background="@color/app_background"
            android:gravity="bottom"
            android:orientation="vertical" >

            <com.viewpagerindicator.TabPageIndicator
                android:id="@+id/titles"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <android.support.v4.view.ViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/convertKeyPager"
                android:layout_width="match_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/app_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/app_background" >

            <Button
                android:id="@+id/clear_button"
                style="@style/CalcButton.Clear"
                android:text="@string/clear_button" />

            <com.llamacorp.equate.view.AnimatedHoldButton
                xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
                android:id="@+id/percent_button"
                style="@style/CalcButton.Operator"
                customNS:secondary_text="@string/ee_button"
                customNS:primary_text="@string/percent_button"
                customNS:secondary_text_font_size_percentage="50" />

            <com.llamacorp.equate.view.AnimatedHoldButton
                xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
                android:id="@+id/divide_button"
                style="@style/CalcButton.Operator"
                customNS:primary_text="@string/divide_button"
                customNS:secondary_text="@string/invert_button"
                customNS:secondary_text_font_size_percentage="50" />

            <ImageButton
                android:id="@+id/backspace_button"
                style="@style/CalcButton.Operator"
                android:adjustViewBounds="false"
                android:src="@drawable/ic_action_backspace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/app_background" >

            <Button
                android:id="@+id/seven_button"
                style="@style/CalcButton.Numb"
                android:text="@string/seven_button" />

            <Button
                android:id="@+id/eight_button"
                style="@style/CalcButton.Numb"
                android:text="@string/eight_button" />

            <Button
                android:id="@+id/nine_button"
                style="@style/CalcButton.Numb"
                android:text="@string/nine_button" />

            <com.llamacorp.equate.view.AnimatedHoldButton
                xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
                android:id="@+id/multiply_button"
                style="@style/CalcButton.Operator"
                customNS:primary_text="@string/multiply_button"
                customNS:secondary_text="@string/power_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/app_background" >

            <Button
                android:id="@+id/four_button"
                style="@style/CalcButton.Numb"
                android:text="@string/four_button" />

            <Button
                android:id="@+id/five_button"
                style="@style/CalcButton.Numb"
                android:text="@string/five_button" />

            <Button
                android:id="@+id/six_button"
                style="@style/CalcButton.Numb"
                android:text="@string/six_button" />

            <com.llamacorp.equate.view.AnimatedHoldButton
                xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
                android:id="@+id/minus_button"
                style="@style/CalcButton.Operator"
                customNS:primary_text="@string/minus_button"
                customNS:secondary_text="@string/negate_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/app_background" >

            <Button
                android:id="@+id/one_button"
                style="@style/CalcButton.Numb"
                android:text="@string/one_button" />

            <Button
                android:id="@+id/two_button"
                style="@style/CalcButton.Numb"
                android:text="@string/two_button" />

            <Button
                android:id="@+id/three_button"
                style="@style/CalcButton.Numb"
                android:text="@string/three_button" />

            <Button
                android:id="@+id/plus_button"
                style="@style/CalcButton.Operator"
                android:text="@string/plus_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/app_background" >

            <Button
                android:id="@+id/zero_button"
                style="@style/CalcButton.Numb"
                android:text="@string/zero_button" />

            <Button
                android:id="@+id/decimal_button"
                style="@style/CalcButton.Numb"
                android:text="@string/decimal_button" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/app_background" >

                <Button
                    android:id="@+id/open_para_button"
                    style="@style/SmallOperator"
                    android:layout_marginRight="1dp"
                    android:text="@string/open_para_button" />

                <Button
                    android:id="@+id/close_para_button"
                    style="@style/SmallOperator"
                    android:layout_marginLeft="1dp"
                    android:text="@string/close_para_button" />
            </LinearLayout>

            <Button
                android:id="@+id/equals_button"
                style="@style/CalcButton.Equals"
                android:text="@string/equals_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>