...
            style="@style/ResultText"
            android:gravity="left"
            android:paddingRight="15dp" >
        </TextView>

        <TextView
            android:id="@+id/list_item_result_textPrevAnswer"
            style="@style/ResultText"
            android:gravity="right"
            android:paddingLeft="15dp" >
        </TextView>
    </LinearLayout>

...
